Fixes z-index issues with drawer and closes #98

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -149,6 +149,7 @@
     height: 100%;
     border-left: 1px solid $color-black--200;
     padding: $sm;
+    z-index: 1;
 
     &__nav {
         ul {
